Basic refactor, removeation of "magic numbers"